# data_encryption_system

./: .gitignore  auth.py  data.json  data.py  generate_key.py  key_manager.py  main.py  pyproject.toml  requirements.txt  users.json
app_pages/: home.py  login.py  sigup.py
app_pages/utils/: logout.py
